<resources>
    <string name="app_name">RedyLog</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="history">History</string>
    <string name="changed_on">Changed on</string>
    <string name="created_on">Created on</string>
    <string name="on">on</string>
    <string name="create_journal">Create Journal</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="create_entry">Create Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="search_filters">Search Filters</string>
    <string name="title_journals">Journals</string>

    <string name="no_journals_exist">No journals to display.</string>
    <string name="no_entries_exist_yet">No entries to display.</string>

    <string name="journal_created_successfully">Journal successfully created!</string>
    <string name="journal_edited_confirmed">Journal successfully edited!</string>
    <string name="journal_closed_confirmed">Journal successfully closed!</string>
    <string name="journal_reopened_confirmed">Journal successfully reopened!</string>
    <string name="journal_deleted_confirmed">Journal successfully deleted!</string>
    <string name="entry_created_confirmed">Entry successfully created!</string>
    <string name="entry_edited_confirmed">Entry successfully edited!</string>
    <string name="entry_hidden_confirmed">Entry successfully hidden!</string>
    <string name="entry_deleted_confirmed">Entry successfully deleted!</string>
    <string name="entry_unhidden_confirmed">Entry successfully unhidden!</string>

    <string name="action_exit">Exit</string>
    <string name="action_add_journal">Add Journal</string>
    <string name="action_close_journal">Close Journal</string>
    <string name="action_reopen_journal">Reopen Journal</string>
    <string name="action_delete_journal">Delete Journal</string>
    <string name="action_search_entries">Search Entries</string>
    <string name="action_unhide_entry">Unhide Entry</string>
    <string name="action_hide_entry">Hide Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="clear_filters">Clear filters</string>

    <string name="login_fragment">LoginFragment</string>
    <string name="register_fragment">RegisterFragment</string>
    <string name="bundle_journal_key">KEY_JOURNAL</string>
    <string name="bundle_entry_key">KEY_ENTRY</string>
    <string name="bundle_history_key">KEY_HISTORY</string>
    <string name="bundle_filter_key">KEY_FILTER</string>
    <string name="search_query">Search Query</string>
    <string name="title_max_length">30</string>
    <string name="multiline_max_lines">6</string>
    <string name="multiline_min_lines">2</string>

    <string name="dialog_close_journal_prompt">Once a journal is closed, it cannot be edited. Are you sure you want to close this journal?</string>
    <string name="dialog_reopen_journal_prompt">Once a journal is reopened, it can be editied again. Are you sure you want to reopen this journal?</string>
    <string name="dialog_hide_entry_prompt">Once an entry is hidden, it cannot be viewed without a search. Are you sure you want to hide this entry?</string>
    <string name="dialog_unhide_entry_prompt">Once an entry is unhidden, it can be viewed again. Are you sure you want to unhide this entry?</string>
    <string name="dialog_delete_journal_prompt">Once a journal is deleted, it cannot be recovered. Are you sure you want to delete this journal?</string>
    <string name="dialog_delete_entry_prompt">Are you sure you want to delete this entry?</string>
    <string name="invalid_password">Invalid password (minimum 8 characters, one letter, one number).</string>
    <string name="empty_password">Please enter a password.</string>
    <string name="invalid_email">Please enter a valid email.</string>
    <string name="invalid_surname">Please enter a valid surname.</string>
    <string name="invalid_name">Please enter a valid first name.</string>
    <string name="registration_successful">Registration successful.</string>

</resources>
