<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="au.edu.uts.redylog.redylog.MainActivity">
    <item
        android:id="@+id/action_create_entry"
        android:orderInCategory="100"
        android:title="@string/create_entry"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close_journal"
        android:orderInCategory="400"
        android:title="@string/action_close_journal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reopen_journal"
        android:orderInCategory="400"
        android:title="@string/action_reopen_journal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_journal"
        android:orderInCategory="400"
        android:title="@string/edit_journal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_journal"
        android:orderInCategory="500"
        android:title="@string/action_delete_journal"
        app:showAsAction="never" />
</menu>