<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFragments.EditEntryDialogFragment">

    <LinearLayout
        style="@style/AppTheme.Wrapper"
        android:orientation="vertical">

        <TextView
            android:text="@string/edit_entry"
            style="@style/AppTheme.Header"/>

        <EditText
            android:id="@+id/et_edit_entry_title"
            android:hint="@string/title"
            style="@style/AppTheme.TextField.Title"/>

        <EditText
            android:id="@+id/et_edit_entry_content"
            android:hint="@string/content"
            style="@style/AppTheme.TextField.Multiline"/>

    </LinearLayout>

</FrameLayout>
