<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFragments.CreateJournalDialogFragment">

    <LinearLayout
        style="@style/AppTheme.Wrapper"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.Header"
            android:text="@string/create_journal" />

        <EditText
            android:id="@+id/et_create_journal_title"
            android:hint="@string/title"
            style="@style/AppTheme.TextField.Title"/>

        <EditText
            android:id="@+id/et_create_journal_description"
            android:hint="@string/description"
            style="@style/AppTheme.TextField.Multiline"/>

    </LinearLayout>

</FrameLayout>
