<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_please_register"
            android:textSize="@dimen/title_size"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etFirstName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_top_padding"
            android:hint="@string/first_name"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etSurname"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_top_padding"
            android:hint="@string/surname"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_top_padding"
            android:hint="@string/email"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_top_padding"
            android:hint="@string/password"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/form_top_padding"
            android:text="@string/register"/>

    </LinearLayout>
</FrameLayout>
