<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFragments.CreateEntryDialogFragment">

    <LinearLayout
        style="@style/AppTheme.Wrapper"
        android:orientation="vertical">

        <TextView
            android:text="@string/search_filters"
            style="@style/AppTheme.Header"/>

        <EditText
            android:id="@+id/search_dialog_startdate"
            android:hint="@string/start_date"
            style="@style/AppTheme.TextField.Centered"/>

        <EditText
            android:id="@+id/search_dialog_enddate"
            android:hint="@string/end_date"
            style="@style/AppTheme.TextField.Centered"/>

        <Spinner
            android:id="@+id/search_dialog_status"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>
