<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFragments.CreateEntryDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_entry"
            android:textSize="@dimen/title_size"
            android:gravity="center"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/et_create_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/et_create_entry_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"/>

    </LinearLayout>

</FrameLayout>
