<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        style="@style/AppTheme.Wrapper"
        android:orientation="vertical">

        <ScrollView
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_max_height">

            <TextView
                android:text="@string/description"
                android:layout_marginTop="0dp"
                android:id="@+id/entry_list_journal_description"
                style="@style/AppTheme.Content"/>

        </ScrollView>

        <LinearLayout
            style="@style/AppTheme.Wrapper"
            android:orientation="horizontal">

            <TextView
                android:text="@string/created_on"
                android:layout_marginRight="@dimen/text_space"
                style="@style/AppTheme.Status" />

            <TextView
                android:text="@string/date"
                android:id="@+id/entry_list_journal_date"
                style="@style/AppTheme.Status"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/entry_list_journal_status_date"
            android:orientation="horizontal"
            style="@style/AppTheme.Wrapper">

            <TextView
                android:text="@string/status"
                android:layout_marginTop="@dimen/text_margin"
                android:id="@+id/entry_list_journal_status"
                style="@style/AppTheme.Status"/>

            <TextView
                android:text="@string/on"
                android:layout_marginRight="@dimen/text_space"
                style="@style/AppTheme.Status"/>

            <TextView
                android:text="@string/date"
                android:id="@+id/entry_list_journal_end_date"
                style="@style/AppTheme.Status"/>

        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.Wrapper"
            android:orientation="horizontal">

            <android.support.v7.widget.SearchView
                android:id="@+id/sv_entries"
                android:layout_weight="1"
                style="@style/AppTheme.Wrapper"/>

            <ImageButton
                android:id="@+id/ib_entry_list_filter"
                style="@style/AppTheme.Filter"/>

        </LinearLayout>

        <View
            style="@style/AppTheme.Divider"/>

        <TextView
            android:id="@+id/tv_entry_error"
            android:text="@string/no_entries_exist_yet"
            style="@style/AppTheme.Error"/>

        <android.support.v7.widget.RecyclerView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rv_entries"
            android:name="au.edu.uts.redylog.redylog.EntryFragment"
            android:minHeight="600dp"
            app:layoutManager="LinearLayoutManager"
            tools:context="au.edu.uts.redylog.redylog.Fragments.EntryListFragment"
            tools:listitem="@layout/item_entry"
            style="@style/AppTheme.RecycleViewContainer" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        style="@style/AppTheme.FloatingActionButton"
        android:id="@+id/fab_entry_list"
        app:fabSize="normal" />

</RelativeLayout>